# the_source_sps_desktop

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  grades_client.rs  lib.rs  main.rs  net.rs
src/class/: attendance.rs  mod.rs
src/class/grade/: mod.rs
src/class/grade/assignment/: mod.rs
