[package]
name = "the_source_sps_desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.0"
egui = "0.21.0"
fantoccini = "0.19.3"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
